// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render a default component 1`] = `
<div
  className="card default"
/>
`;

exports[`Card should use the raised variant when prop is provided 1`] = `
<div
  className="card raised"
/>
`;
